[gd_scene load_steps=52 format=2]

[ext_resource path="res://art/bounty_hunter/abilities/flash/flashbang_10.png" type="Texture" id=1]
[ext_resource path="res://scripts/grenade.gd" type="Script" id=2]
[ext_resource path="res://art/bounty_hunter/abilities/flash/flashbang_11.png" type="Texture" id=3]
[ext_resource path="res://art/bounty_hunter/abilities/flash/flashbang_8.png" type="Texture" id=4]
[ext_resource path="res://art/bounty_hunter/abilities/flash/flashbang_9.png" type="Texture" id=5]
[ext_resource path="res://art/bounty_hunter/abilities/frag/explosion_10.png" type="Texture" id=6]
[ext_resource path="res://art/bounty_hunter/abilities/frag/explosion_11.png" type="Texture" id=7]
[ext_resource path="res://art/bounty_hunter/abilities/frag/explosion_12.png" type="Texture" id=8]
[ext_resource path="res://art/bounty_hunter/abilities/frag/explosion_9.png" type="Texture" id=9]
[ext_resource path="res://art/bounty_hunter/abilities/flash/flashbang_12.png" type="Texture" id=10]
[ext_resource path="res://art/bounty_hunter/abilities/frag/explosion_8.png" type="Texture" id=11]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_13.png" type="Texture" id=12]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_15.png" type="Texture" id=13]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_12.png" type="Texture" id=14]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_17.png" type="Texture" id=15]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_10.png" type="Texture" id=16]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_14.png" type="Texture" id=17]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_16.png" type="Texture" id=18]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_11.png" type="Texture" id=19]
[ext_resource path="res://art/bounty_hunter/abilities/frag/chemical2.png" type="Texture" id=20]
[ext_resource path="res://art/bounty_hunter/abilities/frag/explosion_1.png" type="Texture" id=21]
[ext_resource path="res://art/bounty_hunter/abilities/frag/explosion_2.png" type="Texture" id=22]
[ext_resource path="res://art/bounty_hunter/abilities/frag/explosion_4.png" type="Texture" id=23]
[ext_resource path="res://art/bounty_hunter/abilities/frag/explosion_3.png" type="Texture" id=24]
[ext_resource path="res://art/bounty_hunter/abilities/frag/explosion_6.png" type="Texture" id=25]
[ext_resource path="res://art/bounty_hunter/abilities/frag/explosion_5.png" type="Texture" id=26]
[ext_resource path="res://art/bounty_hunter/abilities/frag/explosion_7.png" type="Texture" id=27]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_4.png" type="Texture" id=28]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_5.png" type="Texture" id=29]
[ext_resource path="res://art/bounty_hunter/abilities/flash/flashbang_13.png" type="Texture" id=30]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke2.png" type="Texture" id=31]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_1.png" type="Texture" id=32]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_2.png" type="Texture" id=33]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_3.png" type="Texture" id=34]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_7.png" type="Texture" id=35]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_9.png" type="Texture" id=36]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_6.png" type="Texture" id=37]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_rotate_8.png" type="Texture" id=38]
[ext_resource path="res://art/bounty_hunter/abilities/flash/flashbang_5.png" type="Texture" id=39]
[ext_resource path="res://art/bounty_hunter/abilities/smoke/smoke_particle.png" type="Texture" id=40]
[ext_resource path="res://art/bounty_hunter/abilities/flash/flashbang_6.png" type="Texture" id=41]
[ext_resource path="res://art/bounty_hunter/abilities/flash/flashbang_2.png" type="Texture" id=42]
[ext_resource path="res://art/bounty_hunter/abilities/flash/flash2.png" type="Texture" id=43]
[ext_resource path="res://art/bounty_hunter/abilities/flash/flashbang_1.png" type="Texture" id=44]
[ext_resource path="res://art/bounty_hunter/abilities/flash/flashbang_3.png" type="Texture" id=45]
[ext_resource path="res://art/bounty_hunter/abilities/flash/flashbang_4.png" type="Texture" id=46]
[ext_resource path="res://art/bounty_hunter/abilities/flash/flashbang_7.png" type="Texture" id=47]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 44 ), ExtResource( 42 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 39 ), ExtResource( 41 ), ExtResource( 47 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 30 ), null ],
"loop": false,
"name": "flash_color",
"speed": 35.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "frag_fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "smoke_fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ) ],
"loop": true,
"name": "flash_fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "frag_color",
"speed": 15.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 37 ), ExtResource( 35 ), ExtResource( 38 ), ExtResource( 36 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 15 ) ],
"loop": true,
"name": "smoke_color",
"speed": 35.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.59836, 17.8063 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 35.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 87.3
angle_random = 0.46
color = Color( 1, 1, 1, 0.0862745 )

[sub_resource type="CircleShape2D" id=4]
radius = 43.1924

[node name="Area2D" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.78785, -1.24947 )
frames = SubResource( 1 )
animation = "flash_color"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.82266, 1.3025 )
shape = SubResource( 2 )

[node name="color" type="Area2D" parent="."]
scale = Vector2( 2, 2 )

[node name="Particles2D" type="Particles2D" parent="color"]
position = Vector2( 0.166044, -0.245655 )
scale = Vector2( 0.5, 0.45 )
emitting = false
amount = 120
lifetime = 4.0
randomness = 1.0
process_material = SubResource( 3 )
texture = ExtResource( 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="color"]
position = Vector2( 1.22599, 0.511374 )
rotation = 1.56734
shape = SubResource( 4 )
disabled = true

[node name="duration" type="Timer" parent="color"]
one_shot = true

[node name="erp_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="color" to="." method="_on_smoke_body_entered"]
[connection signal="body_exited" from="color" to="." method="_on_smoke_body_exited"]
[connection signal="timeout" from="color/duration" to="." method="_on_smoke_duration_timeout"]
